--- a/PhaserGame/scripts/tsconfig.json
+++ b/PhaserGame/scripts/tsconfig.json
@@ -6,6 +6,7 @@
         "sourceMap": true,
         "inlineSources": true,
         "out": "www/scripts/appBundle.js",
-        "target": "es5"
+        "target": "es5",
+        "moduleResolution": "node"
     }
 }
