--- a/Images/Web.config
+++ b/Images/Web.config
@@ -9,7 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Images-20161012062212.mdf;Initial Catalog=aspnet-Images-20161012062212;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="Images" connectionString="Server=localhost\sqlexpress;Database=Images;Trusted_Connection=True;" />-->
+    <add name="Images" connectionString="Server=mssql01.dcsweb.pl;Database=1057_images;Uid=1057_images;Password=admin.X123;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -18,7 +19,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <customErrors mode="Off"/>
+    <customErrors mode="Off" />
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
