--- a/Images/Web.config
+++ b/Images/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <!--<add name="Images" connectionString="Server=localhost\sqlexpress;Database=Images;Trusted_Connection=True;" />-->
-    <add name="Images" connectionString="Server=mssql01.dcsweb.pl;Database=1057_images;Uid=1057_images;Password=admin.X123;" />
+    <add name="Images" connectionString="Server=sql6001.smarterasp.net;Database=DB_A1F4E0_orzech123;Uid=DB_A1F4E0_orzech123_admin;Password=admin.123;" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
